--- a/descriptions/english.gif.html
+++ b/descriptions/english.gif.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class='descriptions'>
-  <div>Northcoders Techstack web design</div>
+  <div>Website design for Enjoyable English</div>
 
 </body>
 
