--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
             </a>
         </div>
         <div class='item'>
-            <a href='?img=17pedalo.jpg'>
-                <img src='images/thumbs/17pedalo.jpg' width='420px' alt='' style='border: 3px solid #fff' />
+            <a href='?img=english.gif'>
+                <img src='images/thumbs/english.gif' width='420px' alt='' style='border: 3px solid #fff' />
             </a>
         </div>
         <div class='item'>
@@ -166,7 +166,7 @@
 
         }
         if (getUrlVars('about')) {
-            var maincontent = "David Jumble is an developer and designer based in Manchester UK</p>Here are some links to web projects</p><a style=text-decoration:none; color:palevioletred;   href='http://tearstearstears.herokuapp.com'; target = '_blank'/>Male Tears</a></p><a style=text-decoration:none; color:palevioletred; target='_blank' href='http://thedailyplanet.herokuapp.com'/>The Daily Planet</a> </p> to get in touch, email: hello@davidjumble.com </p> <p> twitter : <a href='//twitter.com/davidjumble' style=text-decoration:none; ;target = '_blank'>twitter.com/davidjumble </a> </p><p/><img src='images/about/info-photo.jpg'/>";
+            var maincontent = "David Parkinson (Jumble) is a developer and designer based in Manchester UK</p>Here are some links to web projects</p><a style=text-decoration:none; color:palevioletred;   href='http://tearstearstears.herokuapp.com'; target = '_blank'/>Male Tears</a></p><a style=text-decoration:none; color:palevioletred; target='_blank' href='http://thedailyplanet.herokuapp.com'/>The Daily Planet</a> </p> to get in touch, email: hello@davidjumble.com </p> <p> twitter : <a href='//twitter.com/davidjumble' style=text-decoration:none; ;target = '_blank'>twitter.com/davidjumble </a> </p><p/><img src='images/about/info-photo.jpg'/>";
             document.getElementById('focusimg').innerHTML = maincontent;
         }
 
