--- a/descriptions/bb.jpg.html
+++ b/descriptions/bb.jpg.html
@@ -10,7 +10,8 @@
 </head>
 
 <body class='descriptions'>
-  <div>Poster design for Tugboat Ballet Finals gigs</div>
+  <div>Poster for Stockport Sport centres</div>
+
 
 </body>
 
