--- a/descriptions/tears.jpg.html
+++ b/descriptions/tears.jpg.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class='descriptions'>
-  <div>A data visualisation of crying tendencies</div>
+  <div>The design for a data visualisation of crying tendencies</div>
 
 
 </body>
