--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
             <a href='?img=swimming-badges.jpg'>
                 <img src='images/thumbs/swimming-badges.jpg' width='420px' alt='' style='border: 3px solid #fff' />
-   
+
             </a>
         </div>
         <div class='item'>
@@ -92,7 +92,7 @@
             <a href='?img=09tugboats.jpg'>
                 <img src='images/thumbs/09tugboats.jpg' width='420px' alt='' style='border: 3px solid #fff' />
 
-           
+
             </a>
         </div>
         <div class='item'>
@@ -131,8 +131,8 @@
             </a>
         </div>
         <div class='item'>
-            <a href='?img=library-digital.jpg'>
-                <img src='images/thumbs/library-digital.jpg' width='420px' alt='' style='border: 3px solid #fff' />
+            <a href='?img=bb.jpg'>
+                <img src='images/thumbs/bb.jpg' width='420px' alt='' style='border: 3px solid #fff' />
             </a>
         </div>
         <div class='item'>
@@ -141,8 +141,8 @@
             </a>
         </div>
         <div class='item'>
-            <a href='?img=18summer.jpg'>
-                <img src='images/thumbs/18summer.jpg' width='420px' alt='' style='border: 3px solid #fff' />
+            <a href='?img=library.jpg'>
+                <img src='images/thumbs/library.jpg' width='420px' alt='' style='border: 3px solid #fff' />
             </a>
         </div>
         <div class='item'>
