uses an Object to find picture details now

--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
     <!-- For demo only -->
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" src="images/navigation/earth2.png"=>
-
 </head>
 
 <body>
@@ -46,18 +44,18 @@
 
     <div id="timeline" data-columns>
         <div class='item'>
-            <a href='?img=romeo.jpg'>
-                <img src='images/thumbs/romeo.jpg' width='420px' alt='' style='border: 3px solid #fff' />
+            <a href='?img=01romeo.jpg'>
+                <img src='images/thumbs/01romeo.jpg' width='420px' alt='' style='border: 3px solid #fff' />
             </a>
         </div>
         <div class='item'>
-            <a href='?img=tears.jpg'>
-                <img src='images/thumbs/tears.jpg' width='420px' alt='' style='border: 3px solid #fff' />
+            <a href='?img=02tears.jpg'>
+                <img src='images/thumbs/02tears.jpg' width='420px' alt='' style='border: 3px solid #fff' />
             </a>
         </div>
         <div class='item'>
-            <a href='?img=20todge.jpg'>
-                <img src='images/thumbs/20todge.jpg' width='420px' alt='' style='border: 3px solid #fff' />
+            <a href='?img=03drawnorthwest.jpg'>
+                <img src='images/thumbs/03drawnorthwest.jpg' width='420px' alt='' style='border: 3px solid #fff' />
             </a>
         </div>
         <div class='item'>
@@ -66,8 +64,8 @@
             </a>
         </div>
         <div class='item'>
-            <a href='?img=thedailyplanet.png'>
-                <img src='images/thumbs/thedailyplanet.png' width='420px' alt='' style='border: 3px solid #fff' />
+            <a href='?img=05thedailyplanet.png'>
+                <img src='images/thumbs/05thedailyplanet.png' width='420px' alt='' style='border: 3px solid #fff' />
             </a>
         </div>
         <div class='item'>
@@ -76,78 +74,73 @@
             </a>
         </div>
         <div class='item'>
-
-            <a href='?img=swimming-badges.jpg'>
-                <img src='images/thumbs/swimming-badges.jpg' width='420px' alt='' style='border: 3px solid #fff' />
-
+            <a href='?img=07swimmingbadges.jpg'>
+                <img src='images/thumbs/07swimmingbadges.jpg' width='420px' alt='' style='border: 3px solid #fff' />
             </a>
         </div>
         <div class='item'>
-            <a href='?img=08choir.gif'>
-                <img src='images/thumbs/08choir.gif' width='420px' alt='' style='border: 3px solid #fff' />
+            <a href='?img=08soundtown.gif'>
+                <img src='images/thumbs/08soundtown.gif' width='420px' alt='' style='border: 3px solid #fff' />
             </a>
         </div>
         <div class='item'>
-
             <a href='?img=09tugboats.jpg'>
                 <img src='images/thumbs/09tugboats.jpg' width='420px' alt='' style='border: 3px solid #fff' />
-
-
             </a>
         </div>
         <div class='item'>
-            <a href='?img=11sleepyplanets.jpg'>
-                <img src='images/thumbs/11sleepyplanets.jpg' width='420px' alt='' style='border: 3px solid #fff' />
+            <a href='?img=10sleepyplanets.jpg'>
+                <img src='images/thumbs/10sleepyplanets.jpg' width='420px' alt='' style='border: 3px solid #fff' />
             </a>
         </div>
         <div class='item'>
-            <a href='?img=16shippingforecast.jpg'>
-                <img src='images/thumbs/16shippingforecast.jpg' width='420px' alt='' style='border: 3px solid #fff' />
+            <a href='?img=11shippingforecast.jpg'>
+                <img src='images/thumbs/11shippingforecast.jpg' width='420px' alt='' style='border: 3px solid #fff' />
             </a>
         </div>
         <div class='item'>
-            <a href='?img=13fountain.jpg'>
-                <img src='images/thumbs/13fountain.jpg' width='420px' alt='' style='border: 3px solid #fff' />
+            <a href='?img=12fountain.jpg'>
+                <img src='images/thumbs/12fountain.jpg' width='420px' alt='' style='border: 3px solid #fff' />
             </a>
         </div>
         <div class='item'>
-            <a href='?img=14furious.jpg'>
-                <img src='images/thumbs/14furious.jpg' width='420px' alt='' style='border: 3px solid #fff' />
+            <a href='?img=13fastfurious.jpg'>
+                <img src='images/thumbs/13fastfurious.jpg' width='420px' alt='' style='border: 3px solid #fff' />
             </a>
         </div>
         <div class='item'>
-            <a href='?img=15church.jpg'>
-                <img src='images/thumbs/15church.jpg' width='420px' alt='' style='border: 3px solid #fff' />
+            <a href='?img=14church.jpg'>
+                <img src='images/thumbs/14church.jpg' width='420px' alt='' style='border: 3px solid #fff' />
             </a>
         </div>
         <div class='item'>
-            <a href='?img=21godlee.jpg'>
-                <img src='images/thumbs/21godlee.jpg' width='420px' alt='' style='border: 3px solid #fff' />
+            <a href='?img=15godlee.jpg'>
+                <img src='images/thumbs/15godlee.jpg' width='420px' alt='' style='border: 3px solid #fff' />
             </a>
         </div>
         <div class='item'>
-            <a href='?img=english.gif'>
-                <img src='images/thumbs/english.gif' width='420px' alt='' style='border: 3px solid #fff' />
+            <a href='?img=16english.gif'>
+                <img src='images/thumbs/16english.gif' width='420px' alt='' style='border: 3px solid #fff' />
             </a>
         </div>
         <div class='item'>
-            <a href='?img=bb.jpg'>
-                <img src='images/thumbs/bb.jpg' width='420px' alt='' style='border: 3px solid #fff' />
+            <a href='?img=17basketball.jpg'>
+                <img src='images/thumbs/17basketball.jpg' width='420px' alt='' style='border: 3px solid #fff' />
             </a>
         </div>
         <div class='item'>
-            <a href='?img=06computers.jpg'>
-                <img src='images/thumbs/06computers.jpg' width='420px' alt='' style='border: 3px solid #fff' />
+            <a href='?img=18computers.jpg'>
+                <img src='images/thumbs/18computers.jpg' width='420px' alt='' style='border: 3px solid #fff' />
             </a>
         </div>
         <div class='item'>
-            <a href='?img=library.jpg'>
-                <img src='images/thumbs/library.jpg' width='420px' alt='' style='border: 3px solid #fff' />
+            <a href='?img=19library.jpg'>
+                <img src='images/thumbs/19library.jpg' width='420px' alt='' style='border: 3px solid #fff' />
             </a>
         </div>
         <div class='item'>
-            <a href='?img=26wolf.jpg'>
-                <img src='images/thumbs/26wolf.jpg' width='420px' alt='' style='border: 3px solid #fff' />
+            <a href='?img=20trees.jpg'>
+                <img src='images/thumbs/20trees.jpg' width='420px' alt='' style='border: 3px solid #fff' />
             </a>
         </div>
 
@@ -161,17 +154,60 @@
 
     <!-- Scripts -->
     <script>
+        var whatever = {
+            "01romeo.jpg": "<div class = 'descriptions'>Romeo and Juliet Positive futures for 10:10</div>",
+            //
+            "02tears.jpg": "<div class = 'descriptions'> A data visualisation of men's tendency to cry worldwide <p>  <br> <a class = 'links' href = http://tearstearstears.herokuapp.com  target='_blank'/>visit the site here<a/> </div>",
+            //
+            "03drawnorthwest.jpg": "<div class = 'descriptions'> Poster Design for Draw North West and Kosmonaut</div>",
+            //
+            "04northcoders.gif": "<div class = 'descriptions'> Website design for the Northcoders TechStack </div>",
+            //
+            "05thedailyplanet.png": "<div class = 'descriptions'>A prototype magazine site with vote manipulated visuals<p>  <br> <a class = 'links' href = http://thedailyplanet.herokuapp.com  target='_blank'/>visit the site here<a/></div>",
+            //
+            "06godot.jpg": "<div class = 'descriptions'>Positive Futures Godot for 10:10</div>",
+            //
+            "07swimmingbadges.jpg": "<div class = 'descriptions'> Stockport Leisure Keys give Swimming Discount for those over 60 :)  </div>",
+            //
+            "08soundtown.gif": "<div class = 'descriptions'> Soundtown records a sound, then pitch alters it 12 times to make an instrument <p> <div style='position:relative;height:0;padding-bottom:56.25%' > <iframe src='https://www.youtube.com/embed/kG8ICOBesDE?ecver=2' width='640' height='360' frameborder='0' allow='autoplay; encrypted-media' style='position:absolute;width:100%;height:100%;left:0' allowfullscreen></iframe></div></div > ",
+            //
+            "09tugboats.jpg": "<div class = 'descriptions'> A fairly dumb personal piece about extreme tugboating</div>",
+            //
+            "10sleepyplanets": "<div class = 'descriptions'> A sleepy solar system travels silently through the trees</div>",
+            //
+            "11shippingforecast": "<div class = 'descriptions'> The Shipping Forecast</div>",
+            //
+            "12fountain.jpg": "<div class = 'descriptions'>RNCM spring catalogue</div>",
+            //
+            "13fastfurious.jpg": "<div class = 'descriptions'>Vin Diesel is the Purple Octagon</div>",
+            //
+            "14church.jpg": "<div class = 'descriptions'> RNCM Winter catalogue</div>",
+            //
+            "15godlee.jpg": "<div class = 'descriptions'> illustrations and design for Manchester Science Festival</div>",
+            //
+            "16english.gif": "<div class = 'descriptions'>Web design for the Enjoyable English language school</div>",
+            //
+            "17basketball.jpg": "<div class = 'descriptions'> Promotion for the community basketball leagues at Reddish Vale Basketball centre</div>",
+            //
+            "18computers.jpg": "<div><div class = 'descriptions'> Tips for people using computers for the first time </div> <img src='./images/thumbs/computer-diagrams.jpg'/></p></div>",
+            "19library.jpg": "<div class = 'descriptions'> Assets for Stockport Libraries digital Services</div>",
+            "20trees.jpg": " <div class = 'descriptions'>Promotional material for the Peak District National Park </div> ",
+
+
+        }
+
         function getUrlVars(name) {
             name = RegExp('[?&]' + name.replace(/([[\]])/, '\\$1') + '=([^&#]*)');
             return (window.location.href.match(name) || ['', ''])[1];
         }
         if (getUrlVars('img')) {
-            var maincontent = "<img src='images/thumbs/" + getUrlVars('img') + "'/><iframe frameBorder= '0' class = 'iframe' src='descriptions/" + getUrlVars('img') + ".html'/>";
+            var maincontent = "<img src='images/thumbs/" + getUrlVars('img') + "'/>" + whatever[getUrlVars('img')];
+            console.log(getUrlVars('img'))
             document.getElementById('focusimg').innerHTML = maincontent;
 
         }
         if (getUrlVars('about')) {
-            var maincontent = "David Parkinson (Jumble) is a developer and designer based in Manchester UK</p>Here are some links to web projects</p><a style=text-decoration:none; color:palevioletred;   href='http://tearstearstears.herokuapp.com'; target = '_blank'/>Male Tears</a></p><a style=text-decoration:none; color:palevioletred; target='_blank' href='http://thedailyplanet.herokuapp.com'/>The Daily Planet</a> </p> to get in touch, email: hello@davidjumble.com </p> <p> twitter : <a href='//twitter.com/davidjumble' style=text-decoration:none; ;target = '_blank'>twitter.com/davidjumble </a> </p><p/><img src='images/about/info-photo.jpg'/>";
+            var maincontent = "<div class ='descriptions'>David Parkinson (Jumble) is a developer and designer based in Manchester UK </p> to get in touch, email: hello@davidjumble.com </p> <p> twitter : <a href='//twitter.com/davidjumble' style=text-decoration:none; ;target = '_blank'>twitter.com/davidjumble </a> </p><p/><img src='images/about/info-photo.jpg'/></div>";
             document.getElementById('focusimg').innerHTML = maincontent;
         }
 
@@ -183,3 +219,6 @@
 </body>
 
 </html>
+
+<!-- here are links for sites if I wanna put em in later-->
+<!-- <a class = 'links' style=text-decoration:none; color:cyan;   href='http://tearstearstears.herokuapp.com'; target = '_blank'/>Male Tears</a></p><a style=text-decoration:none; color:palevioletred; target='_blank' href='http://thedailyplanet.herokuapp.com'/>The Daily Planet</a> -->
