--- a/index.html
+++ b/index.html
@@ -173,9 +173,9 @@
             //
             "09tugboats.jpg": "<div class = 'descriptions'> A fairly dumb personal piece about extreme tugboating</div>",
             //
-            "10sleepyplanets": "<div class = 'descriptions'> A sleepy solar system travels silently through the trees</div>",
+            "10sleepyplanets.jpg": "<div class = 'descriptions'> A sleepy solar system travels silently through the trees</div>",
             //
-            "11shippingforecast": "<div class = 'descriptions'> The Shipping Forecast</div>",
+            "11shippingforecast.jpg": "<div class = 'descriptions'> The Shipping Forecast</div>",
             //
             "12fountain.jpg": "<div class = 'descriptions'>RNCM spring catalogue</div>",
             //
