twitter link not working so I took it out

--- a/index.html
+++ b/index.html
@@ -190,7 +190,9 @@
             "17basketball.jpg": "<div class = 'descriptions'> Promotion for the community basketball leagues at Reddish Vale Basketball centre</div>",
             //
             "18computers.jpg": "<div><div class = 'descriptions'> Tips for people using computers for the first time </div> <img src='./images/thumbs/computer-diagrams.jpg'/></p></div>",
+            //
             "19library.jpg": "<div class = 'descriptions'> Assets for Stockport Libraries digital Services</div>",
+            //
             "20trees.jpg": " <div class = 'descriptions'>Promotional material for the Peak District National Park </div> ",
 
 
@@ -207,7 +209,7 @@
 
         }
         if (getUrlVars('about')) {
-            var maincontent = "<div class ='descriptions'>David Parkinson (Jumble) is a developer and designer based in Manchester UK </p> to get in touch, email: hello@davidjumble.com </p> <p> twitter : <a href='//twitter.com/davidjumble' style=text-decoration:none; ;target = '_blank'>twitter.com/davidjumble </a> </p><p/><img src='images/about/info-photo.jpg'/></div>";
+            var maincontent = "<div class ='descriptions'>David Parkinson (Jumble) is a developer and designer based in Manchester UK </p> to get in touch, email: hello@davidjumble.com <p/><img src='images/about/info-photo.jpg'/></div>";
             document.getElementById('focusimg').innerHTML = maincontent;
         }
 
