--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
             </a>
         </div>
         <div class='item'>
-            <a href='?img=05thedailyplanet.png'>
-                <img src='images/thumbs/05thedailyplanet.png' width='420px' alt='' style='border: 3px solid #fff' />
+            <a href='?img=05summer.jpg'>
+                <img src='images/thumbs/05summer.jpg' width='420px' alt='' style='border: 3px solid #fff' />
             </a>
         </div>
         <div class='item'>
@@ -119,28 +119,53 @@
             </a>
         </div>
         <div class='item'>
-            <a href='?img=16english.gif'>
-                <img src='images/thumbs/16english.gif' width='420px' alt='' style='border: 3px solid #fff' />
+            <a href='?img=16veganism.jpg'>
+                <img src='images/thumbs/16veganism.jpg' width='420px' alt='' style='border: 3px solid #fff' />
             </a>
         </div>
         <div class='item'>
-            <a href='?img=17basketball.jpg'>
-                <img src='images/thumbs/17basketball.jpg' width='420px' alt='' style='border: 3px solid #fff' />
+            <a href='?img=20basketball.jpg'>
+                <img src='images/thumbs/20basketball.jpg' width='420px' alt='' style='border: 3px solid #fff' />
             </a>
         </div>
         <div class='item'>
-            <a href='?img=18computers.jpg'>
-                <img src='images/thumbs/18computers.jpg' width='420px' alt='' style='border: 3px solid #fff' />
+            <a href='?img=18bigcow.jpg'>
+                <img src='images/thumbs/18bigcow.jpg' width='420px' alt='' style='border: 3px solid #fff' />
             </a>
         </div>
         <div class='item'>
-            <a href='?img=19library.jpg'>
-                <img src='images/thumbs/19library.jpg' width='420px' alt='' style='border: 3px solid #fff' />
+            <a href='?img=19english.gif'>
+                <img src='images/thumbs/19english.gif' width='420px' alt='' style='border: 3px solid #fff' />
+            </a>
+        </div>
+        <!-- <div class='item'>
+            <a href='?img=20basketball.jpg'>
+                <img src='images/thumbs/20basketball.jpg' width='420px' alt='' style='border: 3px solid #fff' />
+            </a>
+        </div> -->
+        <div class='item'>
+            <a href='?img=21computers.jpg'>
+                <img src='images/thumbs/21computers.jpg' width='420px' alt='' style='border: 3px solid #fff' />
             </a>
         </div>
         <div class='item'>
-            <a href='?img=20trees.jpg'>
-                <img src='images/thumbs/20trees.jpg' width='420px' alt='' style='border: 3px solid #fff' />
+            <a href='?img=22library.jpg'>
+                <img src='images/thumbs/22library.jpg' width='420px' alt='' style='border: 3px solid #fff' />
+            </a>
+        </div>
+        <div class='item'>
+            <a href='?img=23bonesbrigade.jpg'>
+                <img src='images/thumbs/23bonesbrigade.jpg' width='420px' alt='' style='border: 3px solid #fff' />
+            </a>
+        </div>
+        <div class='item'>
+            <a href='?img=24trees.jpg'>
+                <img src='images/thumbs/24trees.jpg' width='420px' alt='' style='border: 3px solid #fff' />
+            </a>
+        </div>
+        <div class='item'>
+            <a href='?img=25bathcats.jpg'>
+                <img src='images/thumbs/25bathcats.jpg' width='420px' alt='' style='border: 3px solid #fff' />
             </a>
         </div>
 
@@ -163,7 +188,7 @@
             //
             "04northcoders.gif": "<div class = 'descriptions'> Website design for the Northcoders TechStack </div>",
             //
-            "05thedailyplanet.png": "<div class = 'descriptions'>A prototype magazine site with vote manipulated visuals<p>  <br> <a class = 'links' href = http://thedailyplanet.herokuapp.com  target='_blank'/>visit the site here<a/></div>",
+            "05summer.jpg": "<div class = 'descriptions'>Summer Holidays<p>  <br> </div>",
             //
             "06godot.jpg": "<div class = 'descriptions'>Positive Futures Godot for 10:10</div>",
             //
@@ -185,15 +210,25 @@
             //
             "15godlee.jpg": "<div class = 'descriptions'> illustrations and design for Manchester Science Festival</div>",
             //
-            "16english.gif": "<div class = 'descriptions'>Web design for the Enjoyable English language school</div>",
+
+            "16veganism.jpg": "<div class = 'descriptions'> Veganism</div>",
+            "19english.gif": "<div class = 'descriptions'>Web design for the Enjoyable English language school</div>",
             //
-            "17basketball.jpg": "<div class = 'descriptions'> Promotion for the community basketball leagues at Reddish Vale Basketball centre</div>",
+            "20basketball.jpg": "<div class = 'descriptions'> Promotion for the community basketball leagues at Reddish Vale Basketball centre</div>",
             //
-            "18computers.jpg": "<div><div class = 'descriptions'> Tips for people using computers for the first time </div> <img src='./images/thumbs/computer-diagrams.jpg'/></p></div>",
+            "18bigcow.jpg": "<div class = 'descriptions'> Meow</div>",
+            //
+            "21computers.jpg": "<div><div class = 'descriptions'> Tips for people using computers for the first time </div></div>",
             //
             "19library.jpg": "<div class = 'descriptions'> Assets for Stockport Libraries digital Services</div>",
             //
-            "20trees.jpg": " <div class = 'descriptions'>Promotional material for the Peak District National Park </div> ",
+            "22library.jpg": "<div class = 'descriptions'> Stockport Libraries Digital</div>",
+            //
+            "23bonesbrigade.jpg": "<div class = 'descriptions'> Bones Brigade</div>",
+            //
+            "25bathcats.jpg": "<div class = 'descriptions'> Gardening</div>",
+            //
+            "24trees.jpg": " <div class = 'descriptions'>Promotional material for the Peak District National Park </div> ",
 
 
         }
@@ -209,7 +244,7 @@
 
         }
         if (getUrlVars('about')) {
-            var maincontent = "<div class ='descriptions'>David Parkinson (Jumble) is a developer and designer based in Manchester UK </p> to get in touch, email: hello@davidjumble.com <p/><img src='images/about/info-photo.jpg'/></div>";
+            var maincontent = "David Parkinson (Jumble) is a developer and designer based in Manchester UK</p>Here are some links to web projects</p><a style=text-decoration:none; color:palevioletred;   href='http://tearstearstears.herokuapp.com'; target = '_blank'/>Male Tears</a></p><a style=text-decoration:none; color:palevioletred; target='_blank' href='http://thedailyplanet.herokuapp.com'/>The Daily Planet</a> </p> to get in touch, email: hello@davidjumble.com </p> <p> twitter : <a href='//twitter.com/davidjumble' style=text-decoration:none; ;target = '_blank'>twitter.com/davidjumble </a> </p><p/><img src='images/about/info-photo.jpg'/>";
             document.getElementById('focusimg').innerHTML = maincontent;
         }
 
@@ -221,6 +256,3 @@
 </body>
 
 </html>
-
-<!-- here are links for sites if I wanna put em in later-->
-<!-- <a class = 'links' style=text-decoration:none; color:cyan;   href='http://tearstearstears.herokuapp.com'; target = '_blank'/>Male Tears</a></p><a style=text-decoration:none; color:palevioletred; target='_blank' href='http://thedailyplanet.herokuapp.com'/>The Daily Planet</a> -->
